transit-gateway-centralized-east-west-net-fw/fw_rules_stateful.tf
resource "aws_networkfirewall_rule_group" "block_2222" {
  capacity = 100
  name     = "block-2222"
  type     = "STATEFUL"

  rule_group {
    rules_source {
      stateful_rule {
        action = "DROP"
        header {
          destination      = "0.0.0.0/0"
          destination_port = 2222
          direction        = "ANY"
          protocol         = "TCP"
          source           = "10.0.0.0/8"
          source_port      = "ANY"
        }
        rule_option {
          keyword = "sid:1"
        }
      }
    }
  }
}
